--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,6 +1,6 @@
 /* BACKGROUND */
 
-$ep-bg-lighter: #FFFFFF;
+$ep-bg-white: #FFFFFF;
 $ep-bg-light-transparent: #FFFFFF80;
 $ep-bg-lighter-gray: #FAFAFA;
 $ep-bg-light-gray: #F7F8FA;
@@ -23,4 +23,23 @@ $ep-text-lighter-dark: #8B8B8A;
 $ep-text-light-dark: #7F7F7F;
 $ep-text-light-darker: #74777B;
 $ep-text-blueish-gray: #70727E;
-$ep-text-
+$ep-text-blueish-dark-gray: #5C5E6C;
+$ep-text-blueish-darker-gray: #434959;
+$ep-text-dark-gray: #454545;
+$ep-text-main: #3D404F;
+$ep-text-dark: #3F3F3F;
+$ep-text-dark-blue: #223441;
+$ep-text-darker: #252525;
+$ep-text-light-black: #151515;
+$ep-text-black: #000000;
+
+/* FILL */
+
+$ep-fill-danger:  #E56768;
+$ep-fill-white: #FFFFFF;
+
+/* BORDERS */
+
+$ep-border-white: #FFFFFF;
+$ep-border-light: #ECECEE;
+$ep-border-blueish-light: #E5ECEF;
