--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,31 +17,32 @@ body {
 
 /*#region BACKGROUND UTILITIES */
 
-.bg_warning{
+.bg_warning {
     background-color: $ep-bg-warning;
 }
 
-.bg_light{
+.bg_light {
     background-color: $ep-bg-white;
 }
+
 /*#endregion BACKGROUND UTILITIES */
 
 
 /*#region TEXT UTILITIES */
 
-.ls_1{
+.ls_1 {
     letter-spacing: 1px;
 }
 
-.txt_white{
+.txt_white {
     color: $ep-text-white;
 }
 
-.txt_danger{
+.txt_danger {
     color: $ep-text-danger;
 }
 
-.txt_main{
+.txt_main {
     color: $ep-text-main;
 }
 
@@ -52,11 +53,12 @@ body {
 
 
 
-header{
+header {
     position: absolute;
     margin: auto;
     width: 100%;
-    button{
+
+    button {
         background-color: $ep-bg-warning;
         color: $ep-text-white;
         font-size: 14px;
@@ -65,39 +67,63 @@ header{
 }
 
 
+h2 {
+    font-size: 3rem;
+}
 
 
 
 
-
-#jumbotron{
+#jumbotron {
     background-image: url(../img/hero.png);
     background-size: cover;
-    
-    .col-4{
+
+    .col-4 {
         padding-top: 117px;
         margin-bottom: 8rem;
     }
 
-    h1, p{
+    h1,
+    p {
         color: $ep-text-white;
-        
+
     }
 
 }
 
-#section_splitter{
+#section_splitter {
     background-image: url('../img/Wave-1.png');
     width: 100%;
     height: 150px;
     margin-top: -8rem;
 }
 
-#courses{
+#courses {
     background-image: url('../img/home-background.png');
     background-size: 1800px;
     background-repeat: no-repeat;
     background-position: top right;
-    
-    
+    padding-bottom: 5rem;
+}
+
+#faculties {
+    margin-top: 5rem;
+
+}
+
+.faculties_list {
+    height: 150px;
+    background-color: $ep-bg-white;
+    box-shadow: 0 -20px 10px 0 $ep-bg-lighter-gray;
+    margin-top: 3rem;
+
+    .col {
+        border: 1px solid $ep-border-light;
+        
+    }
+
+    .col>img {
+        width: 50%;
+
+    }
 }
