--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,6 +25,10 @@ body {
     background-color: $ep-bg-white;
 }
 
+.bg_danger{
+    background-color: $ep-bg-danger;
+}
+
 /*#endregion BACKGROUND UTILITIES */
 
 
@@ -49,9 +53,22 @@ body {
 
 /*#endregion TEXT UTILITIES */
 
+/*#region SECTION DIVIDERS */
+#section_splitter {
+    background-image: url('../img/Wave-1.png');
+    width: 100%;
+    height: 150px;
+    margin-top: -8rem;
+}
 
+#faculties_splitter{
+    background-image: url('../svg/svg-0.svg');
+    width: 100%;
+    height: 180px;
 
+}
 
+/*#endregion SECTION DIVIDERS */
 
 header {
     position: absolute;
@@ -75,8 +92,9 @@ h2 {
 
 
 #jumbotron {
-    background-image: url(../img/hero.png);
-    background-size: cover;
+    
+    background: url(../img/theme_slider2_bg-1.jpg);
+    
 
     .col-4 {
         padding-top: 117px;
@@ -91,12 +109,13 @@ h2 {
 
 }
 
-#section_splitter {
-    background-image: url('../img/Wave-1.png');
+.background_overlay{
+    background-color: $ep-bg-danger-transparent;
     width: 100%;
-    height: 150px;
-    margin-top: -8rem;
+    height: 100%;
 }
+
+
 
 #courses {
     background-image: url('../img/home-background.png');
@@ -119,11 +138,56 @@ h2 {
 
     .col {
         border: 1px solid $ep-border-light;
-        
+
     }
 
     .col>img {
         width: 50%;
 
     }
+}
+
+.faculty{
+    margin-top: 6rem;
+
+    p{
+        line-height: 1.8rem;
+    }
+}
+
+#events{
+    background-color: $ep-bg-danger;
+    padding: 15rem 0;
+}
+
+.timeline{
+    margin-top: 10rem;
+    position: relative;
+}
+
+.description{
+    text-align: center;
+    width: 400px;
+    color: $ep-text-white;
+    position: absolute; 
+}
+
+.orientation{
+    top: 200px;
+    left: 15px;
+}
+
+.demo{
+    top: -100px;
+    left: 240px;
+}
+
+.evaluation{
+    top: 200px;
+    left: 470px;
+}
+
+.graduation{
+    top: -100px;
+    left: 700px;
 }
