Add footer (WIP)

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -43,3 +43,4 @@ $ep-fill-white: #FFFFFF;
 $ep-border-white: #FFFFFF;
 $ep-border-light: #ECECEE;
 $ep-border-blueish-light: #E5ECEF;
+$ep-border-warning: #E9D758;
