--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -70,6 +70,15 @@ button.bg_light:hover{
 
 /*#endregion TEXT UTILITIES */
 
+/*#region BORDER UTILITIES */
+
+.border_warning{
+    border-color: $ep-border-warning;
+}
+
+
+/*#endregion BORDER UTILITIES */
+
 /*#region SECTION DIVIDERS */
 #section_splitter {
     background-image: url('../img/Wave-1.png');
@@ -94,9 +103,14 @@ button.bg_light:hover{
 }
 
 #partner_splitter{
-    background-image: url('../img/background-wave3') ;
+    background-image: url('../img/background-wave3.png') ;
+    background-position: -500px -20px;
+    background-repeat: no-repeat;
+    filter: invert(0.03);
+    transform: rotate(180deg) scale(2);
     width: 100%;
-    height: 165px;
+    height: 150px;
+
 }
 
 /*#endregion SECTION DIVIDERS */
@@ -290,4 +304,24 @@ h2 {
     }
    }
    
+}
+
+footer{
+    margin-top: 4.7rem;
+    padding: 5rem 0 ;
+}
+
+.social_icon{
+    border: 1px solid $ep-border-warning;
+    border-radius: 50%;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    aspect-ratio:  1 / 1;
+
+    svg{
+        line-height: 2rem;
+        padding-top: 0.60rem;
+        padding-left: 0.10rem;
+    }
 }
