--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,20 +25,20 @@ body {
     background-color: $ep-bg-white;
 }
 
-.bg_danger{
+.bg_danger {
     background-color: $ep-bg-danger;
 }
 
-button.bg_danger:hover{
+button.bg_danger:hover {
     background-color: $ep-bg-warning;
 }
 
-button.bg_warning:hover{
+button.bg_warning:hover {
     background-color: $ep-bg-danger-transparent;
-    border: 1px solid ;
+    border: 1px solid;
 }
 
-button.bg_light:hover{
+button.bg_light:hover {
     background-color: $ep-bg-light-transparent;
 }
 
@@ -63,7 +63,7 @@ button.bg_light:hover{
     color: $ep-text-main;
 }
 
-.txt_light_dark{
+.txt_light_dark {
     color: $ep-text-light-dark;
 }
 
@@ -72,7 +72,7 @@ button.bg_light:hover{
 
 /*#region BORDER UTILITIES */
 
-.border_warning{
+.border_warning {
     border-color: $ep-border-warning;
 }
 
@@ -87,13 +87,13 @@ button.bg_light:hover{
     margin-top: -8rem;
 }
 
-#faculties_splitter{
+#faculties_splitter {
     background-image: url('../svg/svg-0.svg');
     width: 100%;
     height: 180px;
 }
 
-#events_splitter{
+#events_splitter {
     background-image: url('../svg/svg-1.svg');
     background-position: -20px;
     background-repeat: no-repeat;
@@ -102,8 +102,8 @@ button.bg_light:hover{
     margin-top: -0.5px;
 }
 
-#partner_splitter{
-    background-image: url('../img/background-wave3.png') ;
+#partner_splitter {
+    background-image: url('../img/background-wave3.png');
     background-position: -500px -20px;
     background-repeat: no-repeat;
     filter: invert(0.03);
@@ -126,7 +126,7 @@ header {
         font-size: 14px;
         font-weight: 600;
 
-        &:hover{
+        &:hover {
             background-color: $ep-bg-white;
             color: $ep-text-danger;
         }
@@ -142,9 +142,9 @@ h2 {
 
 
 #jumbotron {
-    
+
     background: url(../img/theme_slider2_bg-1.jpg);
-    
+
 
     .col-4 {
         padding-top: 117px;
@@ -159,7 +159,7 @@ h2 {
 
 }
 
-.background_overlay{
+.background_overlay {
     background-color: $ep-bg-danger-transparent;
     width: 100%;
     height: 100%;
@@ -197,52 +197,65 @@ h2 {
     }
 }
 
-.faculty{
+.faculty {
     margin-top: 6rem;
 
-    p{
+    p {
         line-height: 1.8rem;
     }
 }
 
-#events{
+.faculties_list .col.active {
+    background-color: $ep-bg-danger;
+
+    img{
+        filter:grayscale(100%) brightness(0) invert(100%);
+    }
+
+    h6 {
+        color: $ep-text-white;
+    }
+}
+
+
+#events {
     background-color: $ep-bg-danger;
     padding: 10rem 0;
 }
 
-.timeline{
+.timeline {
     margin: 10rem 0;
     position: relative;
 }
 
-.description{
+.description {
     text-align: center;
     width: 400px;
     color: $ep-text-white;
-    position: absolute; 
+    position: absolute;
 }
 
-.orientation{
+.orientation {
     top: 200px;
     left: 15px;
 }
 
-.demo{
+.demo {
     top: -100px;
     left: 240px;
 }
 
-.evaluation{
+.evaluation {
     top: 200px;
     left: 470px;
 }
 
-.graduation{
+.graduation {
     top: -100px;
     left: 700px;
 }
 
-.flying_button{
+.flying_button {
     display: inline-block;
     margin-bottom: -1.2rem;
     margin-top: 1rem;
@@ -250,95 +263,96 @@ h2 {
     box-shadow: 0 4px 20px -5px $ep-bg-light-dark;
 }
 
-#latest_courses{
+#latest_courses {
     padding: 5rem 0;
 }
 
-#latest_courses .card{
-    box-shadow: -2px 0 6px 8px $ep-bg-light-gray;;
+#latest_courses .card {
+    box-shadow: -2px 0 6px 8px $ep-bg-light-gray;
+    ;
 }
 
-#methods{
+#methods {
     margin-top: 10rem;
 }
 
-.wrapper{
+.wrapper {
     margin-right: 10rem;
 }
 
-#newsletter{
+#newsletter {
     width: 100%;
     background-color: $ep-bg-danger;
     padding: 2.5rem 0;
 
-    h3{
+    h3 {
         font-size: 43px;
     }
 }
 
-.input_area{
+.input_area {
     left: 30px;
 }
 
-.submit{
+.submit {
     width: 50px;
     aspect-ratio: 1 / 1;
     //left: -30px;
 }
 
-#partners{
+#partners {
     margin-top: 5rem;
 }
 
-.partner_icons{
-   
+.partner_icons {
 
-   .col{
-    height: 100%;
-    text-align: center;
-    
-    img{
-        object-fit: contain;
-        max-height: 50px;
-        filter: invert(60%);
 
-        &:hover{
-            filter: none;
+    .col {
+        height: 100%;
+        text-align: center;
+
+        img {
+            object-fit: contain;
+            max-height: 50px;
+            filter: invert(60%);
+
+            &:hover {
+                filter: none;
+            }
         }
     }
-   }
-   
+
 }
 
-footer{
+footer {
     margin-top: 4.7rem;
-    padding: 5rem 0 ;
+    padding: 5rem 0;
 }
 
-.social_icon{
+.social_icon {
     border: 1px solid $ep-border-warning;
     border-radius: 50%;
     height: 50px;
     text-align: center;
     vertical-align: middle;
-    aspect-ratio:  1 / 1;
+    aspect-ratio: 1 / 1;
 
-    svg{
+    svg {
         line-height: 2rem;
         padding-top: 0.60rem;
         padding-left: 0.10rem;
     }
 }
 
-footer a{
+footer a {
     color: $ep-text-white;
     text-decoration: none;
 
-    &:hover{
+    &:hover {
         text-decoration: underline;
     }
 }
 
-footer .badge:hover{
+footer .badge:hover {
     background-color: $ep-bg-warning;
 }
