Fix yellow buttons

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -34,8 +34,9 @@ button.bg_danger:hover {
 }
 
 button.bg_warning:hover {
-    background-color: $ep-bg-danger-transparent;
-    border: 1px solid;
+    background-color: $ep-bg-danger;
+    border: 1px solid $ep-bg-danger-transparent;
+    color: $ep-text-white;
 }
 
 button.bg_light:hover {
